--- a/Samples/WindowsSample/App.xaml
+++ b/Samples/WindowsSample/App.xaml
@@ -1,8 +1,20 @@
-﻿<Application x:Class="WindowsSample.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WindowsSample"
-             StartupUri="MainWindow.xaml">
+﻿<Application 
+    x:Class="WindowsSample.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:WindowsSample"
+    xmlns:vk="http://schemas.vagabond-k.com/winfx/2016/xaml"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <vk:ThemeResourceDictionary/>
+            </ResourceDictionary.MergedDictionaries>
+            
+            <Style x:Key="DefaultButtonStyle" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                <Setter Property="Margin" Value="3"/>
+                <Setter Property="Padding" Value="10"/>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
