--- a/VagabondK.Windows/Themes/Dark.xaml
+++ b/VagabondK.Windows/Themes/Dark.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:vk="clr-namespace:VagabondK.Windows"
     xmlns:vkc="clr-namespace:VagabondK.Windows.Converters"
+    xmlns:vkm="clr-namespace:VagabondK.Windows.Commands"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:classic="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Classic"
@@ -13,7 +14,7 @@
     <!-- Main Colors -->
 
     <Color x:Key="MainColor">#FF595959</Color>
-    <Color x:Key="HoverColor">#FF393939</Color>
+    <Color x:Key="HoverColor">#50000000</Color>
     <Color x:Key="DefaultColor">#FF9BB1C5</Color>
     <SolidColorBrush x:Key="LightBrush" Color="#FF333333" />
     <SolidColorBrush x:Key="ShadeBrush" Color="#FF434343" />
@@ -3461,13 +3462,13 @@
                                                     <ColumnDefinition Width="*"/>
                                                 </Grid.ColumnDefinitions>
                                                 <Image Source="{TemplateBinding Icon}" MaxWidth="16" MaxHeight="16" Margin="3"/>
-                                                <TextBlock Grid.Column="1" Foreground="{StaticResource TextBrush}" Text="{TemplateBinding Title}" Margin="2,0" VerticalAlignment="Center" TextTrimming="CharacterEllipsis"/>
+                                                <TextBlock Grid.Column="1" Foreground="{StaticResource TextBrush}" Text="{TemplateBinding Title}" Margin="2,0" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextTrimming="CharacterEllipsis"/>
                                             </Grid>
                                         </Canvas>
                                         <StackPanel Grid.Column="1" Orientation="Horizontal" WindowChrome.IsHitTestVisibleInChrome="True">
                                             <Button x:Name="MinimizeButton" Focusable="False" Style="{StaticResource ThemeWindowButton}">
                                                 <Button.Command>
-                                                    <vk:MinimizeWindowCommand/>
+                                                    <vkm:MinimizeWindowCommand/>
                                                 </Button.Command>
                                                 <Border x:Name="MinimizeButtonContent" Width="10" Height="10">
                                                     <Rectangle Width="10" Height="2" Fill="{StaticResource TextBrush}" VerticalAlignment="Bottom"/>
@@ -3475,7 +3476,7 @@
                                             </Button>
                                             <Button x:Name="MaximizeButton" Focusable="False" Style="{StaticResource ThemeWindowButton}">
                                                 <Button.Command>
-                                                    <vk:ToggleMaximizeWindowCommand/>
+                                                    <vkm:ToggleMaximizeWindowCommand/>
                                                 </Button.Command>
                                                 <Grid x:Name="MaximizeButtonContent" Width="12" Height="12">
                                                     <Border x:Name="MaximizeWindowIcon" Width="12" Height="10" BorderThickness="1,3,1,1" BorderBrush="{StaticResource TextBrush}"/>
@@ -3487,7 +3488,7 @@
                                             </Button>
                                             <Button x:Name="CloseButton" Foreground="#80FF0000" Focusable="False" Style="{StaticResource ThemeWindowButton}" Template="{StaticResource ThemeWindowCloseButtonTemplate}">
                                                 <Button.Command>
-                                                    <vk:CloseWindowCommand/>
+                                                    <vkm:CloseWindowCommand/>
                                                 </Button.Command>
                                                 <Path x:Name="CloseButtonContent" Margin="1" Stretch="Fill" Width="10" Height="10" Fill="{StaticResource TextBrush}" Data="F1 M 6,4.64204L 2.35797,1L 1,2.35797L 4.64203,6L 1,9.64203L 2.35796,11L 6,7.35796L 9.64204,11L 11,9.64203L 7.35797,6L 11,2.35796L 9.64204,1L 6,4.64204 Z "/>
                                             </Button>
@@ -3502,7 +3503,7 @@
                                         <SolidColorBrush Color="{StaticResource MainColor}" />
                                     </Border.BorderBrush>
                                     <Border BorderBrush="{StaticResource NormalBorderBrush}" Background="{TemplateBinding ClientBackground}" BorderThickness="1" CornerRadius="0,0,0.5,0.5" SnapsToDevicePixels="True" UseLayoutRounding="True">
-                                        <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Margin="{TemplateBinding Padding}" Grid.Column="1" Grid.ColumnSpan="1" Grid.Row="2" />
+                                        <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Margin="{TemplateBinding Padding}" Grid.Column="1" Grid.ColumnSpan="1" Grid.Row="2" ClipToBounds="True"/>
                                     </Border>
                                 </Border>
                             </Border>
@@ -14883,7 +14884,7 @@
                                         <StackPanel Grid.Column="1" Orientation="Horizontal" WindowChrome.IsHitTestVisibleInChrome="True">
                                             <Button x:Name="MinimizeButton" Focusable="False" Style="{StaticResource ThemeWindowButton}">
                                                 <Button.Command>
-                                                    <vk:MinimizeWindowCommand/>
+                                                    <vkm:MinimizeWindowCommand/>
                                                 </Button.Command>
                                                 <Border x:Name="MinimizeButtonContent" Width="10" Height="10">
                                                     <Rectangle Width="10" Height="2" Fill="{StaticResource TextBrush}" VerticalAlignment="Bottom"/>
@@ -14891,7 +14892,7 @@
                                             </Button>
                                             <Button x:Name="MaximizeButton" Focusable="False" Style="{StaticResource ThemeWindowButton}">
                                                 <Button.Command>
-                                                    <vk:ToggleMaximizeWindowCommand/>
+                                                    <vkm:ToggleMaximizeWindowCommand/>
                                                 </Button.Command>
                                                 <Grid x:Name="MaximizeButtonContent" Width="12" Height="12">
                                                     <Border x:Name="MaximizeWindowIcon" Width="12" Height="10" BorderThickness="1,3,1,1" BorderBrush="{StaticResource TextBrush}"/>
@@ -14903,7 +14904,7 @@
                                             </Button>
                                             <Button x:Name="CloseButton" Foreground="#80FF0000" Focusable="False" Style="{StaticResource ThemeWindowButton}" Template="{StaticResource ThemeWindowCloseButtonTemplate}">
                                                 <Button.Command>
-                                                    <vk:CloseWindowCommand/>
+                                                    <vkm:CloseWindowCommand/>
                                                 </Button.Command>
                                                 <Path x:Name="CloseButtonContent" Margin="1" Stretch="Fill" Width="10" Height="10" Fill="{StaticResource TextBrush}" Data="F1 M 6,4.64204L 2.35797,1L 1,2.35797L 4.64203,6L 1,9.64203L 2.35796,11L 6,7.35796L 9.64204,11L 11,9.64203L 7.35797,6L 11,2.35796L 9.64204,1L 6,4.64204 Z "/>
                                             </Button>
